# recommender-test

./: README.md  docker-compose.yml  install-dependency.sh  install-package.sh  pyproject.toml
grip/common/: common_id_cryptor.py  config.py  custom_decorator.py  env.py  str_enum.py  utils.py
grip/common/config/: config-prod.toml  config-test.toml
grip/common/config/.ipynb_checkpoints/: config-local_prod-checkpoint.toml
grip/common/datasource/: clickhouse.py  dynamodb_data_loader.py  grip_db_table.py  griprun_db_table.py  postgres.py  s3_data_manager.py
grip/common/model/: category_type.py  user_type.py
grip/common/nlp/: nlp_util.py
grip/common/nlp/llm/: callbacks.py  embedding_generator.py  generative_model.py  message.py  text_generator.py
mlruns/.trash/376039051199724962/: meta.yaml
mlruns/.trash/376039051199724962/53659d9aafaf44be8eecf51b1d6207ea/: meta.yaml
mlruns/.trash/376039051199724962/a4d8e7d570ac412686a7376991e7fc01/: meta.yaml
mlruns/114088960580083138/: meta.yaml
mlruns/114088960580083138/4b11fb49aca342ec9d356a0855b2e6cd/: meta.yaml
mlruns/114088960580083138/4b11fb49aca342ec9d356a0855b2e6cd/metrics/: accuracy  f1_score  precision  (+3 more)
mlruns/376039051199724962/: meta.yaml
mlruns/376039051199724962/53659d9aafaf44be8eecf51b1d6207ea/: meta.yaml
mlruns/376039051199724962/a4d8e7d570ac412686a7376991e7fc01/: meta.yaml
mlruns/457773552543619106/: meta.yaml
mlruns/457773552543619106/f1c7fe99fa3448ba9cc416ba099688cd/: meta.yaml
mlruns/490376599792958195/: meta.yaml
mlruns/490376599792958195/07c3c4fb20194bb7a663a179788d2079/: meta.yaml
mlruns/490376599792958195/b1ed00f8f0f14a9f9f6a9ea2a45fa9f7/: meta.yaml
mlruns/490376599792958195/ff775c47e0f847d8a3b4962067883aae/: meta.yaml
mlruns/633984049566377248/: meta.yaml
mlruns/633984049566377248/324e440125764308a76e0bfd371916cb/: meta.yaml
mlruns/633984049566377248/84558767e5454477a1a2fda5a214901b/: meta.yaml
mlruns/633984049566377248/c293b74c83ba420eb74fefa80cc25230/: meta.yaml
mlruns/633984049566377248/ef5c9b72790a44e8942c70dd936f1adb/: meta.yaml
mlruns/747756578894522283/: meta.yaml
mlruns/747756578894522283/c1c4f5d972184201a7b099fd6c723139/: meta.yaml
recommender/home_whole/NCF/: NCF.py
recommender/more/NCF/: NCF.py  config.py
recommender/more/NCF_user_age/: train.sh
(+92 files in other folders)
