[tool.poetry]
name = "grip-aibigdata-ml"
version = "0.1.0"
description = ""
authors = ["aibigdata team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
tqdm = "^4.65.0"
awswrangler = "^3.7.2"
treelib = "^1.6.4"
sqlalchemy = "^2.0.23"
clickhouse-sqlalchemy = "^0.3.0"
gevent = "^23.9.1"
# psycopg2-binary는 공식 문서에서 프로덕션 환경에 사용하지 말 것을 권장하고 있지만 직접 컴파일해서 사용하기에 docker환경에서는 너무 무거움
# 그리고 docker 환경에서는 공식 문서에서 제기하는 위험성이 비교적 낮으므로 binary를 직접 사용
psycopg2-binary = "^2.9.9"
polars = "^0.20.13"
hashids = "^1.3.1"
langchain = "^0.1.16"
langchain-google-vertexai = "^1.0.1"
langchain-openai = "^0.1.3"
grpcio = "^1.62.1"
typer = { version = "^0.9.0", extras = ["all"] }
pydantic = "^2.7.0"
langchain-community = "^0.0.34"
# pip dependency resolver로 인해 pendulum 설치시 의존도 확인인 time-machine>=2.6.0가 ==로 pinned 되어야 함
# time-machine의 최신 버전인 2.14.1를 명시적으로 설치 처리
time-machine = "2.14.1"
pendulum = "^3.0.0"

[tool.poetry.group.pyspark.dependencies]
pyspark = "^3.5.1"

[tool.poetry.group.ml.dependencies]
lightgbm = "^4.1.0"
transformers = "^4.38.2"
lightning = "^2.2.1"
accelerate = "^0.25.0"
torchmetrics = "^1.2.1"
torch = "2.2.1"
torchvision = "0.17.1"
torchaudio = "2.2.1"

[tool.poetry.group.ai_studio.dependencies]
gradio = "^4.8.0"
streamlit = "^1.32.0"
watchdog = "^3.0.0"
lightgbm = "^4.1.0"
scikit-surprise = "^1.1.4"
implicit = "^0.7.2"

[tool.poetry.group.search.dependencies]
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
mlxtend = "^0.23.1"
gensim = "^4.3.2"
bayesian-optimization = "1.4.2" # 1.4.3으로 업그레이드 시 오류 발생(1.4.3에서 breaking change가 있음)
konlpy = "^0.6.0"
levenshtein-finder = "^1.0.1"
soynlp = "^0.0.493"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[tool.poetry.group.dev.dependencies]
nox = "^2024.04.15"
flake8 = "^7.0.0"
mypy = "^1.9.0"
debugpy = "1.6.2"
jupyter = "^1.0.0"
black = { extras = ["jupyter"], version = "^24.4.0" }
flake8-bugbear = "^24.2.6"

[tool.black]
line-length = 120
target-version = ["py311"]
enable-unstable-feature = [
    "multiline_string_handling",
    "hug_parens_with_braces_and_square_brackets",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
